# appfx-storage

./: .gitignore  .mailmap  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API_SPECIFICATION.md
examples/: WithSDK.py  main.py
examples/blob/: 01_basic_upload_download.py  02_upload_file.py  03_create_container.py  04_generate_sas.py  05_list_blobs.py  06_delete_operations.py  07_metadata.py  08_batch_upload.py  09_check_exists.py  10_comparison_with_sdk.py
examples/queue/: 01_basic_send_receive.py  02_create_queue.py  03_json_messages.py  04_batch_operations.py  05_message_visibility.py  06_peek_messages.py  07_queue_management.py  08_clear_and_cleanup.py  09_worker_pattern.py
src/appfx/storage/: __init__.py  shared_config.py
src/appfx/storage/blob/: __init__.py  async_helper.py  config.py  helper.py
src/appfx/storage/queue/: __init__.py  async_helper.py  helper.py
tests/: test_async_helper_correctness.py  test_exports_and_initialization.py  test_offline_helper_behavior.py
